# bevy

./: .gitignore  Cargo.toml
crates/bevy_editor/: Cargo.toml
crates/bevy_editor/assets/ci/github/workflows/: ci.yaml  release.yaml
crates/bevy_editor/assets/default_template/: Cargo.toml
crates/bevy_editor/locales/: en.yml
crates/bevy_editor/src/: lib.rs  localize.rs  main.rs  templater.rs
crates/bevy_editor/tests/: test.rs
crates/bevy_internal/: Cargo.toml
crates/bevy_internal/src/: lib.rs
src/: main.rs
