[package]
name = "bevy_editor"
authors = ["Leif Andersen <leif@leif.pl>"]
version = "0.12.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "wrap_help", "string", "unicode"] }
colored = "2.0.4"
directories = "5.0.1"
git2 = "0.18.1"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
rust-embed = "8.0.0"
rust-i18n = "2.2.1"
serde = { version = "1.0.190", features = ["derive"] }
tera = "1.19.1"
toml_edit = { version = "0.20.7", features = ["serde"] }
zip = "0.6.6"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
